Added test code for web worker

--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "colorsys": "^1.0.22",
+    "comlink": "^4.3.0",
     "gl-matrix": "^3.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "worker-loader": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
