--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "comlink": "^4.3.0",
     "gl-matrix": "^3.3.0",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
