--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -39,7 +39,7 @@ jobs:
       run: npm install
 
     - name: Build
-      run: npm run build
+      run: CI=false npm run build
 
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
